--- a/styles/style.css
+++ b/styles/style.css
@@ -809,7 +809,7 @@ img {
   padding: 16px;
 }
 
-.content-width, .section01 .container, .section03 .container, .section04 .container, .exercise {
+.content-width, .section01 .container, .section03 .container, .exercise {
   width: 90%;
   margin: 0 auto;
   max-width: 1070px;
@@ -831,7 +831,7 @@ img {
   color: #535353;
 }
 
-.flex, .section01-heading, .section01-ul, .section01-ul-li > .li_img, .section03-heading, .section03-ul {
+.flex, .section01-heading, .section01-ul, .section01-ul-li > .li_img, .section03-heading, .section03-ul, .section04 .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -981,6 +981,25 @@ Stylesheet: 600px以上のタブレットやモニタで適用
     -ms-flex-preferred-size: 33%;
         flex-basis: 33%;
     padding: 0;
+  }
+  .section04 .container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .section04 .container .blog {
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
+  }
+  .section04 .container .recruit {
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
   }
   .exercise > .list {
     -webkit-box-orient: horizontal;
